.. -*- coding: utf-8 -*-

==================
 Docutils History
==================

:Author: David Goodger; open to all Docutils developers
:Contact: goodger@python.org
:Date: $Date$
:Revision: $Revision$
:Web site: http://docutils.sourceforge.net/
:Copyright: This document has been placed in the public domain.

.. contents::


Changes Since 0.5
=================

* General:

  - Apply [ 1878977 ] make_id(): deaccent characters.
  - Backwards-compatible changes to remove python2.6 -3 deprecation warnings
  - Text nodes now subclass unicode rather than UserString
    (which is gone in python 3.0)
  - Apply [ 1719345 ] Galician translation 
  - Apply [ 1905741 ] polish-translation

* docutils/nodes.py:

  - Added ``Element.__contains__`` method, for the in-operator.

* docutils/parsers/rst/states.py:

  - Apply [ 1994493 ] Patch to support all kinds of quotes in inline markup.
  - Added support for Unicode inline markup delimiters "‐ ‑ ‒ – —" and
    " " (non-breaking space), and "¡ ¿" openers.

* docutils/writers/newlatex2e/__init__.py:

  - Apply [ 1612821 ] Double quotes in literal text in Italian/German

* docutils/writers/latex2e/__init__.py:

  - Add option ``--embed-stylesheet``.
  - Apply [ 1474017 ] image vertical alignment is reversed.
  - Apply [ 2051599 ] multi-page tables in latex writer (from pabigot).
  - Fix: for spanish ``~n`` is ``n`` with tilde above, change to ``~{}n``.
  - Change: has_key for dictionaries (not Nodes) to in-operator.
  - Merge adjacent citations into one latex cite command.

* docs/ref/rst/restructuredtext.txt:

  - Documented Unicode characters allowed as inline markup openers,
    closers, and delimiters.


Release 0.5 (2008-06-25)
========================

* docutils/languages/he.py: Added to project: Hebrew mappings by
  Meir Kriheli.

* docutils/parsers/rst/languages/he.py: Added to project: Hebrew 
  mappings by Meir Kriheli.

* docutils/frontend.py:

  - Configuration files are now assumed and required to be